CaelusDB_v02.1 - opraveno zobrazeni letenek pro 'admin_aerolinky'

--- a/main/templates/main/detail_moje_lety.html
+++ b/main/templates/main/detail_moje_lety.html
@@ -50,7 +50,7 @@
 
         <button onclick="openQR('{{ let.id }}', '{{ let.cislo_letu }}', '{{ user.email }}', '{{ user_roles }}')" 
                 class="btn btn-primary" style="width: 100%; border-radius: 10px; padding: 15px; font-size: 1.1rem;">
-            Osobní QR kód (Posádka)
+            QR kód
         </button>
 
     </div>
